--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactfire": "^3.0.0-rc.0",
